# dotfiles

./: .gitignore  .sops.yaml  .stow-local-ignore  0001-fix-add-monitor-configuration-to-kumatani.patch  icons  mise.toml  new.patch
aliases/: atmux.sh  (+8 more)
nix/homelab/: Cargo.toml  config.toml  configuration.nix  flake.nix  hardware-configuration.nix  kube-configuration.nix  kube-disk-config.nix  update-node.sh
nix/homelab/api/: Cargo.toml  flake.nix
nix/homelab/api/src/: error.rs  kubernetes.rs  main.rs  rcon.rs
nix/homelab/cli/: Cargo.toml  askama.toml
nix/homelab/cli/src/: error.rs  main.rs  reporter.rs
nix/homelab/cli/templates/: backup-job.yaml
nix/homelab/frontend/: .gitignore  .prettierrc  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
nix/homelab/frontend/src/: App.svelte  app.css  app.html
nix/homelab/helm/: helmfile.yaml
nix/homelab/helm/kustomize/: kustomization.yaml
nix/homelab/helm/values/: consul.yaml  gitea-runners.yaml  gitea.yaml  gitlab.yaml  home-assistant.yaml  jellyfin.yaml  longhorn-values.yaml  longhorn.yaml  nfs.yaml  nvidia-device-plugin.yaml  pihole.yaml  prometheus.yaml
nix/homelab/kustomize/: backup-job-manual.yaml  generate-restore-job.sh  headscale-migrate.yaml  hscale-migrate.yaml  kustomization.yaml  restore-job.yaml  routes.yaml
nix/homelab/kustomize/cert-manager/: config.yaml
nix/homelab/kustomize/media/: bazarr.yaml  flaresolverr.yaml  prowlarr.yaml  qbittorrent.yaml  radarr.yaml  shoko.yaml  sonarr.yaml
nix/homelab/kustomize/metallb/: pool.yaml
nix/homelab/kustomize/routes/: consul-media.yaml  consul-vaultwarden.yaml  home-assistant.yaml  longhorn.yaml  media.yaml  minecraft.yaml  pihole.yaml
nix/homelab/kustomize/security/: vaultwarden.yaml
nix/homelab/kustomize/storage/: registry.yaml
nix/homelab/kustomize/traefik/: chain.yaml  chains.yaml  config.yaml  (+3 more)
nix/homelab/modules/: commonPackages.nix  default.nix
nix/homelab/scripts/: apply-secrets.sh  generate-chains.sh  generate-restore-job.sh  generate-routes.sh
nix/homelab/src/: commands.rs  config.rs  dns.rs  error.rs  lease_parser.rs  main.rs  pihole.rs  transport.rs
(+172 files in other folders)
