[package]
name = "homelab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
nom = "8.0.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
ssh2 = "0.9.5"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt"] }
toml = "0.9.10"
urlencoding = "2"
