[package]
name = "homelab-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
dotenvy = "0.15.7"
nom = "8.0.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = "1.49.0"
tokio-util = { version = "0.7", features = ["io"] }
kube = { version = "2.0.1", features = ["client", "runtime", "ws"] }
k8s-openapi = { version = "0.26", features = ["v1_32"] }
chrono = "0.4"
futures = "0.3"
